objects/zkups__UPSShipmentSpecialServices__c.object
<CustomObject>
    <description>UPS Shipment Special Services stores the various shipment level options associated with a UPS shipment. Note, some special services are &quot;package level&quot; and are a part of the UPS Package record</description>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>UPS Shipment Special Services</relationshipLabel>
        <relationshipName>UPS_Shipment_Special_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__AllowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__CarbonNeutral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carbon Neutral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__Cod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPS C.O.D.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DeliverToAddresseeOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver To Addressee Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DeliveryConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delivery Confirmation. Please check Signature Option to see signature level requested for delivery confirmation.</description>
        <inlineHelpText>Delivery Confirmation. Please check Signature Option to see signature level requested for delivery confirmation</inlineHelpText>
        <label>Delivery Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__DirectDeliveryOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Delivery Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__HandlingHeight__c</fullName>
        <label>Handling Height</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__HandlingLength__c</fullName>
        <label>Handling Length</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__HandlingQuantity__c</fullName>
        <label>Handling Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__HandlingUnits__c</fullName>
        <label>Handling Units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__HandlingWidth__c</fullName>
        <label>Handling Width</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__IsPackageReleaseCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Package Release Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PackageReleaseCode__c</fullName>
        <label>Package Release Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnMerchaniseDescription__c</fullName>
        <label>Return Merchanise Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnTypeName__c</fullName>
        <label>Return Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ReturnType__c</fullName>
        <label>Return Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__SaturdayDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__SelectedSignatureOption__c</fullName>
        <description>Selected Signature Option for Delivery Confirmation</description>
        <inlineHelpText>Selected Signature Option for Delivery Confirmation</inlineHelpText>
        <label>Selected Signature Option</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__TotalCodAmount__c</fullName>
        <description>Shipment C.O.D. Amount, in the specified shipment currency</description>
        <inlineHelpText>Shipment C.O.D. Amount, in the specified shipment currency</inlineHelpText>
        <label>COD Total Collection Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__UPSShipment__c</fullName>
        <label>UPS Shipment</label>
        <referenceTo>zkups__UPSShipment__c</referenceTo>
        <relationshipLabel>UPS Shipment Special Services</relationshipLabel>
        <relationshipName>UPS_Shipment_Special_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UPS Shipment Special Services</label>
    <nameField>
        <displayFormat>UPS-SpecialServices-{000000000}</displayFormat>
        <label>UPS Shipment SpecialServices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Shipment Special Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>